# equilibrium

./: .gitignore  Dockerfile  Dockerfile.old  README.md  devinit.sh  pyproject.toml  pyproject.toml.old
.devcontainer/: devcontainer.json
diffusion/: main.py  unet.py
equilibrium/: main_chatgpt.py  mnist_diffusion.py  normalization.py  oldutils.py  segmentation.py  unet.py  utils.py
equilibrium/flow/: flow.py  generation.py  standalone.py
equilibrium/flow/image_training/: train.py  train_loop.py
equilibrium/flow/path/: affine.py  path.py  path_sample.py
equilibrium/flow/path/scheduler/: scheduler.py
equilibrium/flow/solver/: ode_solver.py
equilibrium/models/: bertlm.py  embeddings.py  gaussian_diffusion.py  schedulers.py  textdiff.py  unet.py
equilibrium/utils/: inspection.py  rounding.py
examples/bert_gen/: encoder.py  generator.py  main.py
examples/image_training/: main.py
examples/text_onehot/: encoder.py  flow.py  main.py  model.py  sft.py
experiments/fss/: data.py  retry.py
experiments/gemma-test/: main.py
fabrique/: _main.py  loading.py
fabrique/models/bert/: load_rules.py  modeling.py
fabrique/models/mpnet/: __init__.py  load_rules.py
old/: bertlm.py  gaussian_diffusion.py  main.py  mnist_diffusion.py  normalization.py  schedulers.py  segmentation.py  snippets.py  text_diffusion.py  textdiff.py  transformer.py  unet.py
src/equilibrium/: tokenizer.py
src/equilibrium/autoencoder/: vae.py
src/equilibrium/models/: transformer.py
src/equilibrium/utils/: rounding.py
tests/: test_loading.py
(+1 files in other folders)
