[project]
name = "equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "optax>=0.2.2",
    "orbax>=0.1.9",
    "tokenizers>=0.19.1",
    "safetensors>=0.4.3",
    "huggingface-hub>=0.23.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]


[tool.uv]
default-groups = ["dev"]