[project]
name = "equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "optax>=0.2.2",
    "orbax>=0.1.9",
    "tokenizers>=0.19.1",
    "safetensors>=0.4.3",
    "huggingface-hub>=0.23.1",
    "fabrique>=0.1.2",
    "jax[cuda]==0.6.1",
    "jaxlib[cuda]==0.6.1",
    "datasets>=3.6.0",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]
extra = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    # "webdriver-manager>=4.0.2",
]


[tool.uv]
default-groups = ["dev", "extra"]
